--- a/dart_settings/MIT_ImagingLab_settings.json
+++ b/dart_settings/MIT_ImagingLab_settings.json
@@ -2,17 +2,17 @@
   "id": "00000000-0000-0000-0000-000000000000",
   "appSettings": [
     {
-      "id": "a9f6bb2c-6cf9-4a95-a789-670481130b87",
+      "id": "5ad1da32-ae59-4868-be4a-99e9eaf5c985",
       "name": "Bagging Directory",
       "value": "",
-      "help": ""
+      "help": "Where should DART put the bags it builds?"
     }
   ],
   "bagItProfiles": [
     {
-      "id": "e04290f9-0744-42b0-b8b4-ccb5f0a4ded1",
+      "id": "027a4011-1cd0-425a-b2dd-d7dfc2c71837",
       "name": "MIT Imaging Lab",
-      "description": "Profile for transferring content from the Imaging Lab to DDC",
+      "description": "For use to transfer DDC digitized content",
       "acceptBagItVersion": [
         "0.97",
         "1.0"
@@ -33,7 +33,7 @@
         "contactName": "",
         "externalDescription": "",
         "sourceOrganization": "",
-        "version": "1"
+        "version": ""
       },
       "manifestsRequired": [
         "md5"
@@ -62,7 +62,7 @@
       ],
       "tags": [
         {
-          "id": "07edd90d-236d-4705-aa2b-76789c4c7002",
+          "id": "e4a7bde6-07ae-426f-9a0d-7e36bcf0d61e",
           "tagFile": "bagit.txt",
           "tagName": "BagIt-Version",
           "required": true,
@@ -79,7 +79,7 @@
           "wasAddedForJob": false
         },
         {
-          "id": "dd32b9da-6cfe-4122-83a8-12c386b35d1d",
+          "id": "291c6bdb-2312-4386-8a06-46aa23e62ba4",
           "tagFile": "bagit.txt",
           "tagName": "Tag-File-Character-Encoding",
           "required": true,
@@ -93,40 +93,12 @@
           "wasAddedForJob": false
         },
         {
-          "id": "3196459e-c969-43dc-a230-dd394b76515e",
-          "tagFile": "bag-info.txt",
-          "tagName": "Bag-Count",
-          "required": false,
-          "values": [],
-          "defaultValue": "",
-          "userValue": "",
-          "help": "",
-          "isBuiltIn": false,
-          "isUserAddedFile": false,
-          "isUserAddedTag": false,
-          "wasAddedForJob": false
-        },
-        {
-          "id": "81869c34-5099-4475-adda-b6703869a728",
-          "tagFile": "bag-info.txt",
-          "tagName": "Bag-Group-Identifier",
-          "required": false,
-          "values": [],
-          "defaultValue": "",
-          "userValue": "",
-          "help": "",
-          "isBuiltIn": false,
-          "isUserAddedFile": false,
-          "isUserAddedTag": false,
-          "wasAddedForJob": false
-        },
-        {
-          "id": "a9d6d7ae-30d9-4462-b4a4-fac48b1f65bc",
+          "id": "24408f4c-2e4e-4600-954b-b2b2a3777192",
           "tagFile": "bag-info.txt",
           "tagName": "Bag-Size",
           "required": false,
           "values": [],
-          "defaultValue": null,
+          "defaultValue": "",
           "userValue": "",
           "help": "",
           "isBuiltIn": false,
@@ -135,12 +107,12 @@
           "wasAddedForJob": false
         },
         {
-          "id": "84229f05-a94d-484f-a569-b79b8ad9f156",
+          "id": "5267cb23-83a1-4bda-a7e1-8e9d66217ab6",
           "tagFile": "bag-info.txt",
           "tagName": "Bagging-Date",
           "required": false,
           "values": [],
-          "defaultValue": null,
+          "defaultValue": "",
           "userValue": "",
           "help": "",
           "isBuiltIn": false,
@@ -149,12 +121,12 @@
           "wasAddedForJob": false
         },
         {
-          "id": "3d9fa4ab-a626-4ade-ae15-6b0708004db6",
+          "id": "2bc4a36d-a9f4-486e-a35c-0183f7d902f0",
           "tagFile": "bag-info.txt",
           "tagName": "Bagging-Software",
           "required": false,
           "values": [],
-          "defaultValue": null,
+          "defaultValue": "",
           "userValue": "",
           "help": "",
           "isBuiltIn": false,
@@ -163,137 +135,67 @@
           "wasAddedForJob": false
         },
         {
-          "id": "63ed5f7e-6ac8-40d2-9402-a929a90b0e07",
+          "id": "611bb0f7-b7b4-471a-be36-baab85296503",
           "tagFile": "bag-info.txt",
           "tagName": "Contact-Email",
           "required": false,
           "values": [],
-          "defaultValue": null,
+          "defaultValue": "",
           "userValue": "",
-          "help": "",
+          "help": "The email of the person doing the transfer",
           "isBuiltIn": false,
           "isUserAddedFile": false,
           "isUserAddedTag": false,
           "wasAddedForJob": false
         },
         {
-          "id": "6aa09215-b743-4a63-8417-d05857af4126",
+          "id": "d886bb71-fa7e-45ac-b850-b1f084e0ba09",
           "tagFile": "bag-info.txt",
           "tagName": "Contact-Name",
           "required": true,
           "values": [],
-          "defaultValue": null,
-          "userValue": "",
-          "help": "",
-          "isBuiltIn": false,
-          "isUserAddedFile": false,
-          "isUserAddedTag": false,
-          "wasAddedForJob": false
-        },
-        {
-          "id": "f3b3cdff-8ffc-481a-b7ac-9ced736d6e88",
-          "tagFile": "bag-info.txt",
-          "tagName": "Contact-Phone",
-          "required": false,
-          "values": [],
           "defaultValue": "",
           "userValue": "",
-          "help": "",
+          "help": "The name of the person doing the transfer",
           "isBuiltIn": false,
           "isUserAddedFile": false,
           "isUserAddedTag": false,
           "wasAddedForJob": false
         },
         {
-          "id": "f9a467dd-69bb-4332-80d3-6d99895ba71a",
-          "tagFile": "bag-info.txt",
-          "tagName": "External-Description",
-          "required": false,
-          "values": [],
-          "defaultValue": "",
-          "userValue": "",
-          "help": "",
-          "isBuiltIn": false,
-          "isUserAddedFile": false,
-          "isUserAddedTag": false,
-          "wasAddedForJob": false
-        },
-        {
-          "id": "626b45d6-e497-4ee4-ac76-46645cd07969",
-          "tagFile": "bag-info.txt",
-          "tagName": "External-Identifier",
-          "required": false,
-          "values": [],
-          "defaultValue": "",
-          "userValue": "",
-          "help": "",
-          "isBuiltIn": false,
-          "isUserAddedFile": false,
-          "isUserAddedTag": false,
-          "wasAddedForJob": false
-        },
-        {
-          "id": "99672329-4ba6-4943-83c9-3f57b167d0e9",
+          "id": "8ee3f07c-4f07-46ff-8e7f-556e912078e2",
           "tagFile": "bag-info.txt",
           "tagName": "Internal-Sender-Description",
           "required": true,
           "values": [],
-          "defaultValue": null,
+          "defaultValue": "",
           "userValue": "",
-          "help": "",
+          "help": "Description of the topical contents of the material",
           "isBuiltIn": false,
           "isUserAddedFile": false,
           "isUserAddedTag": false,
           "wasAddedForJob": false
         },
         {
-          "id": "ce55f278-827a-4e6d-9aa9-b0e7d2bb89fc",
+          "id": "2cb23b43-7abb-4e35-99e9-82805a6c5861",
           "tagFile": "bag-info.txt",
           "tagName": "Internal-Sender-Identifier",
           "required": true,
           "values": [],
-          "defaultValue": null,
-          "userValue": "",
-          "help": "",
-          "isBuiltIn": false,
-          "isUserAddedFile": false,
-          "isUserAddedTag": false,
-          "wasAddedForJob": false
-        },
-        {
-          "id": "ff5e1eae-1639-483b-bd3e-5ef773e0dbb2",
-          "tagFile": "bag-info.txt",
-          "tagName": "Organization-Address",
-          "required": false,
-          "values": [],
           "defaultValue": "",
           "userValue": "",
-          "help": "",
+          "help": "The reformatting request number associated this bag, such as 2023.001RR",
           "isBuiltIn": false,
           "isUserAddedFile": false,
           "isUserAddedTag": false,
           "wasAddedForJob": false
         },
         {
-          "id": "ad472ff9-2ca8-4e46-95b7-45bb01095677",
+          "id": "b67ddefc-ca16-41bc-a226-6b6652786c51",
           "tagFile": "bag-info.txt",
           "tagName": "Payload-Oxum",
           "required": false,
           "values": [],
-          "defaultValue": null,
-          "userValue": "",
-          "help": "",
-          "isBuiltIn": false,
-          "isUserAddedFile": false,
-          "isUserAddedTag": false,
-          "wasAddedForJob": false
-        },
-        {
-          "id": "304bb7aa-c0e1-4c3c-a86d-61ebc77f235b",
-          "tagFile": "bag-info.txt",
-          "tagName": "Source-Organization",
-          "required": false,
-          "values": [],
           "defaultValue": "",
           "userValue": "",
           "help": "",
@@ -303,61 +205,61 @@
           "wasAddedForJob": false
         },
         {
-          "id": "eacc0cde-d066-49da-893f-7eeed120ff5a",
+          "id": "0ce883f7-e528-42c2-b8c8-e48d438666c4",
           "tagFile": "bag-info.txt",
           "tagName": "Related-Resource",
           "required": true,
           "values": [],
-          "defaultValue": null,
+          "defaultValue": "",
           "userValue": "",
-          "help": "",
+          "help": "The archival collection where the material belongs, such as AC-0001",
           "isBuiltIn": false,
           "isUserAddedFile": false,
-          "isUserAddedTag": false,
+          "isUserAddedTag": true,
           "wasAddedForJob": false
         },
         {
-          "id": "4877e5e1-ba04-48c6-8b30-3bec6dfaebcb",
+          "id": "78591b5c-e1e9-4f21-a3a6-af1ae4ee15c6",
           "tagFile": "bag-info.txt",
           "tagName": "Provenance",
           "required": true,
           "values": [],
-          "defaultValue": null,
+          "defaultValue": "Digitized by MIT Libraries Imaging Lab for on demand digitization",
           "userValue": "",
-          "help": "",
+          "help": "Who digitized these files",
           "isBuiltIn": false,
           "isUserAddedFile": false,
-          "isUserAddedTag": false,
+          "isUserAddedTag": true,
           "wasAddedForJob": false
         }
       ],
       "serialization": "optional",
-      "baseProfileId": null,
+      "baseProfileId": "782a0e8b-d739-4f20-99dc-991fd395d14f",
       "isBuiltIn": false,
       "tarDirMustMatchName": false
     }
   ],
   "questions": [
     {
-      "id": "eb2d35f2-2b9c-4094-9d9e-cdd8b20c02eb",
-      "prompt": "What is the file path for where you want to send the files?",
+      "id": "e6f53370-b61a-4cbb-a778-2f3fb0edb8f0",
+      "prompt": "What is the file path to the submission drive digitized folder on the computer you're using? For instance Z:\\Digitized",
       "objType": "AppSetting",
-      "objId": "a9f6bb2c-6cf9-4a95-a789-670481130b87",
+      "objId": "5ad1da32-ae59-4868-be4a-99e9eaf5c985",
       "field": "value"
     },
     {
-      "id": "4c59c550-2295-41fb-9b97-5a785e0e8982",
-      "prompt": "What is the name of the person doing the transfer?",
+      "id": "29615dbb-6d59-428e-9bc6-dae0f00ad417",
+      "prompt": "Enter the name (first and last) of the person who will be using this tool on this computer",
       "objType": "BagItProfile",
-      "objId": "e04290f9-0744-42b0-b8b4-ccb5f0a4ded1",
-      "field": "6aa09215-b743-4a63-8417-d05857af4126"
+      "objId": "027a4011-1cd0-425a-b2dd-d7dfc2c71837",
+      "field": "d886bb71-fa7e-45ac-b850-b1f084e0ba09"
     },
     {
-      "id": "73ecc2e4-d2de-4809-a659-0396fd3c53dd",
-      "prompt": "What is the email address of the person doing the transfer?",
+      "id": "108d247e-59d9-4719-977a-2775a14f6c92",
+      "prompt": "Enter the email address of the person who will be using this tool on this computer",
       "objType": "BagItProfile",
-      "objId": "e04290f9-0744-42b0-b8b4-ccb5f0a4ded1",
-      "field": "63ed5f7e-6ac8-40d2-9402-a929a90b0e07"
+      "objId": "027a4011-1cd0-425a-b2dd-d7dfc2c71837",
+      "field": "611bb0f7-b7b4-471a-be36-baab85296503"
     }
   ],
   "remoteRepositories": [],
